# personal_assistant

./: .env.example  .gitignore  Procfile  README.md  conftest.py  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
personal_assistant/: check_paths.py  requirements.txt  settings.py
personal_assistant/accounts/: accounts_test.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
personal_assistant/accounts/migrations/: 0001_initial.py  0002_delete_profile.py
personal_assistant/comments/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
personal_assistant/comments/migrations/: 0001_initial.py  0002_remove_comment_user_remove_post_created_at_and_more.py  0003_alter_comment_post_delete_post.py
personal_assistant/contacts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
personal_assistant/contacts/migrations/: 0001_initial.py
personal_assistant/core/: asgi.py  middleware.py  settings.py  test_settings.py  urls.py  utils.py  wsgi.py
personal_assistant/files/: Untitled-1.py  admin.py  apps.py  file_list.html  forms.py  models.py  tests.py  upload.html  urls.py  views.py
personal_assistant/files/migrations/: 0001_initial.py
personal_assistant/news/: admin.py  apps.py  geo_service.py  models.py  servic.py  services.py  tests.py  urls.py  views.py  weather_service.py
personal_assistant/news/migrations/: 0001_initial.py  0002_alter_newssummary_user.py  0002_post.py  0003_news.py  0003_post_created_at.py  (+1 more)
personal_assistant/notes/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
personal_assistant/personal_assistant/: settings.py  urls.py
personal_assistant/portfolio/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
personal_assistant/templates/: base.html  index.html
tests/: test_accounts.py  test_models.py  test_news_models.py  test_news_services.py  test_news_views.py  test_notes.py  test_services.py  test_settings.py  test_views.py  tests.py  tests_files.py  tests_files_forms.py  tests_files_models.py  tests_files_views.py
(+42 files in other folders)
