[tool.poetry]
name = "personal-assistant"
version = "0.1.0"
description = ""
authors = ["Vasilivi4 <137120278+Vasilivi4@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
psycopg2-binary = "^2.9.9"
newsapi-python = "^0.2.7"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
django-storages = {extras = ["google"], version = "^1.14.4"}
sqlparse = "^0.5.3"
typing-extensions = "^4.12.2"
tzdata = "^2024.2"
asgiref = "^3.8.1"
cloudinary = "^1.42.0"
django-cloudinary-storage = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"
factory-boy = "^3.3.1"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
coverage = "^7.6.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=. --cov-fail-under=90"
