[tool.poetry]
name = "personal-assistant"
version = "0.1.0"
description = ""
authors = ["Vasilivi4 <137120278+Vasilivi4@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
